# file_digger

./: Cargo.toml  README.md
src/: .flag.rs.swp  .flags.rs.swp  .lib.rs.swp  .main.rs.swp  fast_search_all.rs  fast_search_no_dots.rs  flag.rs  lib.rs  main.rs  no_dot_files_verbose_path.rs  pretty_recurse_no_dots.rs  print_dirs.rs  print_file_n_limit.rs  print_full_path.rs  print_ignore_pattern.rs  print_prune.rs  print_tree.rs  print_tree_all.rs  recurse.rs  recursive_file_search.rs  recursive_print_all.rs  verbose_recurse.rs
